[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/mouse_2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Mob_Physics.tscn" type="PackedScene" id=3]
[ext_resource path="res://code/Camera.gd" type="Script" id=4]
[ext_resource path="res://code/main.gd" type="Script" id=5]
[ext_resource path="res://Scene/city.tscn" type="PackedScene" id=6]
[ext_resource path="res://data/Mplus2-Medium.tres" type="DynamicFont" id=7]
[ext_resource path="res://data/model/mouse/body2.material" type="Material" id=8]
[ext_resource path="res://data/model/mouse/face2.material" type="Material" id=9]
[ext_resource path="res://data/model/mouse/body3.material" type="Material" id=10]
[ext_resource path="res://data/model/mouse/face1.material" type="Material" id=11]
[ext_resource path="res://data/model/goal_mesh.tres" type="ArrayMesh" id=12]
[ext_resource path="res://data/model/goal.tres" type="Material" id=13]
[ext_resource path="res://code/goal_mouse.gd" type="Script" id=14]
[ext_resource path="res://Scene/miniMap.tscn" type="PackedScene" id=15]
[ext_resource path="res://data/key_map.png" type="Texture" id=16]

[sub_resource type="CylinderShape" id=1]
height = 16.4853
radius = 23.1401

[node name="main" type="Spatial"]
script = ExtResource( 5 )

[node name="Ground" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 0.555033, 0.831828, 0, -0.831828, 0.555033, 0, 0, 0 )
shadow_enabled = true

[node name="city" parent="Ground" instance=ExtResource( 6 )]

[node name="goal" type="Area" parent="Ground/city"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 76.6441, 0, 5.25582 )
collision_layer = 32
collision_mask = 2
script = ExtResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/city/goal"]
shape = SubResource( 1 )

[node name="mouse5" parent="Ground/city/goal" instance=ExtResource( 2 )]
transform = Transform( -0.861124, 1.04021e-07, 0.508395, -1.50996e-07, -0.8, -2.84217e-14, 0.508395, -6.14124e-08, 0.861124, -2.28654, 1.1116, 10.7052 )
__meta__ = {
"_editor_description_": ""
}

[node name="mouse7_2" parent="Ground/city/goal" instance=ExtResource( 2 )]
transform = Transform( 0.453259, 0, -0.891379, 0, 0.8, 0, 0.891379, 0, 0.453259, 7.55311, 0, 7.62939e-06 )
__meta__ = {
"_editor_description_": ""
}
face_material = ExtResource( 9 )
body_material = ExtResource( 10 )

[node name="mouse7_3" parent="Ground/city/goal" instance=ExtResource( 2 )]
transform = Transform( -0.682993, 0, 0.730425, 0, 0.8, 0, -0.730425, 0, -0.682993, -6.94479, 0, -7.43247 )
__meta__ = {
"_editor_description_": ""
}
face_material = ExtResource( 11 )
body_material = ExtResource( 10 )

[node name="mouse7_4" parent="Ground/city/goal" instance=ExtResource( 2 )]
transform = Transform( -0.443337, 5.35537e-08, -0.896355, -1.50996e-07, -0.8, -6.39489e-14, -0.896355, 1.08277e-07, 0.443337, 8.23698, 0.951374, -10.5146 )
__meta__ = {
"_editor_description_": ""
}
face_material = ExtResource( 11 )
body_material = ExtResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="Ground/city/goal"]
transform = Transform( 15.2053, 0, 0, 0, 97.1309, 0, 0, 0, 15.2053, 0, 91.28, 0 )
mesh = ExtResource( 12 )
material/0 = ExtResource( 13 )

[node name="mura" type="Area" parent="Ground/city"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 87.6421, 0, 90.3127 )
collision_layer = 64
collision_mask = 34

[node name="CollisionShape" type="CollisionShape" parent="Ground/city/mura"]
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.969235, 0, -0.246136, 0, 1, 0, 0.246136, 0, 0.969235, -77.5372, 0, 39.5351 )

[node name="camera" type="Position3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 2, 0 )
script = ExtResource( 4 )

[node name="CamPivot" type="Position3D" parent="Player/camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.42545e-07, 0, -6.6762 )

[node name="Camera" type="Camera" parent="Player/camera/CamPivot"]
transform = Transform( -1, -1.52574e-09, 8.74095e-08, 0, 0.999848, 0.0174524, -8.74228e-08, 0.0174524, -0.999848, 0, 0, 0 )
fov = 40.0
far = 800.0
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Node2D" parent="Player/camera/CamPivot/Camera"]

[node name="Label" type="Label" parent="Player/camera/CamPivot/Camera/Node2D"]
margin_left = 854.0
margin_top = 83.0
margin_right = 954.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 7 )
text = "生存ネズミ"
align = 2

[node name="mouse_N" type="Label" parent="Player/camera/CamPivot/Camera/Node2D/Label"]
margin_left = 114.0
margin_right = 154.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 7 )
text = "15"

[node name="miniMap" parent="Player/camera/CamPivot/Camera/Node2D" instance=ExtResource( 15 )]
position = Vector2( 77, 79 )
scale = Vector2( 0.243, 0.243 )

[node name="key_map2" type="Node2D" parent="Player/camera/CamPivot/Camera/Node2D"]
position = Vector2( 780, 143 )
scale = Vector2( 0.96, 1 )

[node name="key_map" type="Sprite" parent="Player/camera/CamPivot/Camera/Node2D/key_map2"]
position = Vector2( 124.368, 159 )
scale = Vector2( 0.407, 0.447 )
texture = ExtResource( 16 )

[node name="Label2" type="Label" parent="Player/camera/CamPivot/Camera/Node2D/key_map2"]
margin_left = 22.3684
margin_top = 128.0
margin_right = 62.3684
margin_bottom = 158.0
custom_fonts/font = ExtResource( 7 )
text = "走る"
__meta__ = {
"_editor_description_": ""
}

[node name="Label3" type="Label" parent="Player/camera/CamPivot/Camera/Node2D/key_map2"]
margin_left = 22.3684
margin_top = 69.0
margin_right = 62.3684
margin_bottom = 99.0
custom_fonts/font = ExtResource( 7 )
text = "移動"
__meta__ = {
"_editor_description_": ""
}

[node name="Label4" type="Label" parent="Player/camera/CamPivot/Camera/Node2D/key_map2"]
margin_left = 7.36841
margin_top = 166.0
margin_right = 87.3684
margin_bottom = 196.0
custom_fonts/font = ExtResource( 7 )
text = "ジャンプ"
__meta__ = {
"_editor_description_": ""
}

[node name="Label5" type="Label" parent="Player/camera/CamPivot/Camera/Node2D/key_map2"]
margin_left = 12.3684
margin_top = 206.0
margin_right = 72.3684
margin_bottom = 236.0
custom_fonts/font = ExtResource( 7 )
text = "かがむ"
__meta__ = {
"_editor_description_": ""
}

[node name="Label6" type="Label" parent="Player/camera/CamPivot/Camera/Node2D/key_map2"]
margin_left = 22.3684
margin_top = 240.0
margin_right = 62.3684
margin_bottom = 270.0
custom_fonts/font = ExtResource( 7 )
text = "挑発"
__meta__ = {
"_editor_description_": ""
}

[node name="Mob" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -94.2614, 0.665492, 85.6894 )

[connection signal="body_entered" from="Ground/city/goal" to="." method="_on_goal_body_entered"]
[connection signal="body_entered" from="Ground/city/mura" to="." method="_on_mura_body_entered"]
[connection signal="player_hit" from="Player" to="." method="_on_Player_player_hit"]
